syntax = "proto3";

option java_multiple_files=true;
option java_package="com.poultry.authservice";
option  java_outer_classname="UserServiceProto";


service UserService {
  rpc GetUserByEmail (GetUserByEmailRequest) returns (UserResponse);
}

message GetUserByEmailRequest {
  string email = 1;
}

message UserResponse {
  int64 id = 1;
  string fullName = 2;
  string email = 3;
  string password = 4;
  repeated Role roles = 5;
}

enum Role {
  ROLE_UNSPECIFIED = 0;
  ROLE_ADMIN = 1;
  ROLE_VET = 2;
  ROLE_FARMER = 3;
  ROLE_SUPERVISOR = 4;
  ROLE_USER = 5;
  ROLE_SUPPLIER = 6;
  ROLE_TRADER = 7;
}